Set invisible border to prevent layout shift when switching themes

--- a/frontend/src/Components/Footer/Footer.module.scss
+++ b/frontend/src/Components/Footer/Footer.module.scss
@@ -42,10 +42,11 @@
   flex-direction: column;
   gap: 2.5rem;
   position: relative;
+  border-top: 1px solid transparent;
 
   @include theme-dark {
     background: #151515;
-    border-top: 1px solid #262626;
+    border-top-color: #262626;
   }
 }
 
